@@ -10,13 +10,13 @@ AUX jruby 97 RMD160 500ca93e1a23897fb3d9ebd0b1a6ba7caec9be1d SHA1 ae79a6d60a9e28
 AUX jruby-1.6.0-system-jars.patch 6081 RMD160 3f03fe19330ffd568562246b8fc0749913836663 SHA1 0b9a864853c91d3dd72c173e3039b7889356854f SHA256 dc657d3e8f673e10531b1c3f8e2bf75f997aa53d37c4f5545a830122148e1e3f
 AUX user-test-fixes.patch 5147 RMD160 6258879413ae81a18d0c6bcaa3b0661d86a0d14a SHA1 32d3f80db383cf664c9ad1f9e52c2688ae3cbe5c SHA256 f21469d41de9f9b5fb1682596f64899a71c92332db24bf27e8c50dbb1896a92e
 DIST jruby-src-1.6.4.tar.gz 13939963 RMD160 db720537b22e1f7e4b31db8c325ecb051150c398 SHA1 733f55a64e2eb8131ddd31a724918b785eb04d36 SHA256 7a19afe6610aba02cb33419e089d6121a4a4dbc182db7b7043e8f2413be0250b
-EBUILD jruby-1.6.4.ebuild 6312 RMD160 30c7f3c8437122813995d4d2add2ad2884912c9d SHA1 ccc15f216d4ce7b74d38d0bbaabb8d99b16e7e25 SHA256 1e48c7eecb157571e93f621da1858223444217d98d2a160a02db30509da471ae
-MISC ChangeLog 221 RMD160 5d8c27cf4621a08e588155e88f7e432934635b7c SHA1 5448d0935595a577b046f3f4f9fccaed04d1445a SHA256 117fcb6c546691db2a25add667a77486a15daee5ca762317ebbe06c782f9eca4
+EBUILD jruby-1.6.4.ebuild 5710 RMD160 f07d1f1428875495fc645c386b57dc09229da7b6 SHA1 11e062f8068c3a8d77493c3e4a650d81479377d0 SHA256 06c161a3e9624b97a3e47953c85c7e8ef01530573842b252388d3d84cb11cf0c
+MISC ChangeLog 372 RMD160 e3d443ad97c3b0eb0d77bf9014025d3b753613b8 SHA1 cee38bf7da2e8ad1b23627a06fadd5b664de8af6 SHA256 ca33dcd3d427d86fdcf378112d06b44faaf3c829f224deadaa2e2f6f644e6d2b
 MISC metadata.xml 179 RMD160 3813d8d3651faaf99042cb3c776d0bc59ad7b5b4 SHA1 421371d5338c6b9b8b4950c44d78a9dbe79cf64d SHA256 0df27adc265ef6596f973641d25b64b7291c87f1b114d6895f69d222049bed1b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk6CENMACgkQiIP6VqMIqNcJZQD/S8RA7Cx1vDrtWN/9ZuyrR+P/
-SThJKEN50LbXxiUfVL4A/jzlmcWMegsuOedUHwdFChje281pEuwhkYgoW9I5rsmp
-=kTVZ
+iF4EAREIAAYFAk6CFtkACgkQiIP6VqMIqNcVlwD9HVO6o/dFl8Hg8zf8UqwEnAM5
+jlBnGdbzhqU+P9B3ay8A/16YXENcAc23Ct4bXp84ve69ZtRe/SVvh7ACH3oBxDyT
+=iwe9
 -----END PGP SIGNATURE-----
